# EnderChest

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-or-enhancement--gherkin-.md  feature-or-enhancement--non-gherkin-.md
.github/workflows/: docs_branch_update.yml  docs_branch_update_dev.yml  publish.yml  pull_request.yml  update_badges.yml  update_coverage.yml
0.0.4/: index.html  sitemap.xml
0.0.4/about/: index.html
bar/: 404.html  gen_apidocs.py  index.html
dev/: 404.html  gen_apidocs.py  index.html  lint-report.txt  objects.inv
dev/about/: index.html
dev/cli/: index.html
dev/contrib/: index.html
dev/coverage/: covindex.html  d_2e01aeca92c751f7_file_py.html  (+21 more)
docs/: about.md  contrib.md  gen_apidocs.py  index.md  installation.md  suggestions.md  usage.md
enderchest/: __init__.py  _version.py  cli.py  config.py  craft.py  enderchest.py  filesystem.py  gather.py  instance.py  inventory.py  link.py  load.py  loggers.py  orchestrate.py  place.py  prompt.py  remote.py  scandalous_file.py  shulker_box.py  sync.py  uninstall.py
foo/: sitemap.xml
itfm/: objects.inv
v0.0.4/: 404.html
v0.1.0/: 404.html  index.html  objects.inv
v0.1.1/: lint-report.txt
v0.1.2/: gen_clidocs.py  index.html
v0.1.3/: 404.html  lint-report.txt
v0.1.4/: 404.html  index.html  lint-report.txt
v0.1.5/: 404.html  gen_apidocs.py  gen_clidocs.py  index.html  objects.inv
(+303 files in other folders)
